@@ -1,5 +1,6 @@
 \name{data}
 \alias{data}
+\alias{print.packageIQR}
 \title{Data Sets}
 \description{
   Loads specified data sets, or list the available data sets.
@@ -22,8 +23,9 @@ data(\dots, list = character(0), package = .packages(),
     printed.}
 }
 \value{
-  \code{data()} returns a character vector of all data sets specified,
-  an empty character vector if none were specified.
+  a character vector of all data sets specified, or information about
+  all available data sets in an object of class \code{"packageIQR"} if
+  none were specified.
 }
 \details{
   Currently, four formats of data files are supported:
@@ -52,7 +54,10 @@ data(\dots, list = character(0), package = .packages(),
   sets.  It looks for a file \file{00Index} in a \file{data} directory
   of each specified package, and uses these files to prepare a listing.
   If there is a \file{data} area but no index a warning is given: such
-  packages are incomplete.
+  packages are incomplete.  The information about available data sets is
+  returned in an object of class \code{"packageIQR"}.  The structure of
+  this class is experimental.  In earlier versions of R, an empty
+  character vector was returned along with listing available data sets.
 
   If \code{lib.loc} is not specified,  the datasets are searched for
   amongst those packages already loaded, followed by the \file{data}
